--- a/TemDeTudo/Properties/launchSettings.json
+++ b/TemDeTudo/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "TemDeTudo": {
+    "UltraStore": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
