--- a/TemDeTudo/appsettings.json
+++ b/TemDeTudo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TemDeTudoContext": "Server=(localdb)\\mssqllocaldb;Database=TemDeTudo.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UltraStoreContext": "Server=(localdb)\\mssqllocaldb;Database=UltraStore.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
