--- a/UltraStore/appsettings.json
+++ b/UltraStore/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UltraStoreContext": "Server=(localdb)\\mssqllocaldb;Database=UltraStore.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UltraStoreContext": "Server=(localdb)\\<MSSQLLocalDB>;Database=UltraStore.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
+
 }
