--- a/UltraStore/appsettings.json
+++ b/UltraStore/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UltraStoreContext": "Server=(localdb)\\<MSSQLLocalDB>;Database=UltraStore.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UltraStoreContext": "Server=(localdb)\\MSSQLLocalDB;Database=UltraStore.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-
 }
