--- a/UltraStore.csproj
+++ b/UltraStore.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ControllersBackup\**" />
     <Compile Remove="NovaPasta\**" />
+    <Content Remove="ControllersBackup\**" />
     <Content Remove="NovaPasta\**" />
+    <EmbeddedResource Remove="ControllersBackup\**" />
     <EmbeddedResource Remove="NovaPasta\**" />
+    <None Remove="ControllersBackup\**" />
     <None Remove="NovaPasta\**" />
   </ItemGroup>
 
