--- a/LvlUp.csproj
+++ b/LvlUp.csproj
@@ -40,4 +40,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\games\" />
+  </ItemGroup>
+
 </Project>
