--- a/LvlUp.csproj
+++ b/LvlUp.csproj
@@ -42,6 +42,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\games\" />
+    <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
 </Project>
